ci: updated to trigger on feature branches
Updated the yaml to trigger for all push/pull on feature

--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -3,11 +3,11 @@ name: CI
 on:
   push:
     branches:
-      - feature/*
+      - 'feature/**'
 
   pull_request:
     branches:
-      - feature/*
+      - 'feature/**'
 
 jobs:
   test:
